# PHD

./: .gitignore  PAPER_B.md  README.md  TASKS.md  launch_ui.sh  pyproject.toml  test.py  training_launcher.html
.claude/: settings.local.json
baselines/: b1_finetune.py  b2_replay.py  b3_ewc.py  b4_l2p.py  b5_lora_moe.py  b6_llama_pro.py  b7_pnn.py  runner.py
baselines/_runtime/: __init__.py  eval.py  runner.py  trainer_factory.py
configs/: base.yaml  paper_b.yaml
configs/ablations/: e_cls3.yaml  e_route.yaml  e_sat.yaml  e_scope.yaml  e_timing.yaml
configs/baselines/: b6_paper_b.yaml
data/: __init__.py  _base.py  cc_news.py  domain_sequential.py  temporal_processing_v2.py  tokenizer.py
docs/: LLM_Training_Report.docx  dataset-downloader.skill  dataset_gap_analysis.md  dataset_research_report.md  dataset_strategy_report.md  literature_survey_t5_base_em_scores.md  llama_pro_reference.md  paper_b_ideas_journal.md  paper_c_ideas_journal.md  research_ideas_journal.md
docs/archive/: dataset_gap_analysis.md  dataset_research_report.md  dataset_strategy_report.md
docs/datasets/: data_processing_v2_usage.md  (+1 more)
legacy/: config.json  inca_replay.py  train_inca_v3.py
paper1/: Dockerfile  README.md  gpu-worker-pod.yaml  infer_inca.py  requirements.txt  requirements_cuda.txt  run.py  zip_me.py
preprocessing/: run.py  temporal.py
scripts/: analyze_probe_leakage.py  process_temporal_data_v2.py  run_paper_b.py  train_baselines.py  train_inca.py
tests/: test_plateau.py  test_replay.py  test_selectors.py
training/: cl_runner.py  inca_trainer.py  memory_tracker.py
(+153 files in other folders)
